# steam-project

./: .gitignore  README.md  _backup_Steam_Analytics.py  app.py  build_search_index.py  docs_검색_README.md  eda.ipynb  eval_search.py  main.py  mlflow.db  pyproject.toml  requirements.txt  run_all.py  run_pipeline.py  server.py  style.py  train_hidden_gem.py  train_hit_reference.py  발표본.md
.github/workflows/: train.yml
configs/: config.yaml
dashboard/: Home.py  main.py  pyproject.toml  style.py
dashboard/.streamlit/: config.toml
dashboard/pages/: 1_장르분석.py  2_가격분석.py  3_예측모델.py
dashboard/utils/: preprocessing.py
data/processed/: T_test_hidden_gem.joblib  T_test_hit.joblib  T_train_hidden_gem.joblib  T_train_hit.joblib  X_test_hidden_gem.parquet  X_test_hit.parquet  X_train_hidden_gem.parquet  X_train_hit.parquet  pipeline_meta.json  scaler_hidden_gem.joblib  scaler_hit.joblib  tfidf_hidden_gem.joblib  tfidf_hit.joblib  y_test_hidden_gem.parquet  y_test_hit.parquet  y_train_hidden_gem.parquet  y_train_hit.parquet
model/: README.md  dl_mlp_train.py  ml_lgbm_optimized.py  ml_rf_train.py  ml_rf_train_tuning.py
pages/: 3_예측모델.py  4_숨은명작.py  5_게임검색.py
slide/: steam_models_3slides.pptx  steam_models_5slides.pptx  발표본.txt
src/: gating.py  pipeline.py  search_engine.py  validate.py
utils/: preprocessing.py
