[project]
name = "steam-project"
version = "0.1.0"
description = "Steam ML vs DL 비교 프로젝트"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.3",
    "kagglehub>=0.3",
    "mlflow>=2.9",
    "numpy>=1.26,<2.2",
    "pandas>=2.0,<3",
    "pyarrow>=14,<20",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "imbalanced-learn>=0.12",
    "streamlit>=1.30",
    "plotly>=5.0",
]